--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="my-portfolio/src/main.jsx"></script>
     <!-- ✅ Do NOT manually write any script tag to main.jsx -->
     <!-- Vite will inject the correct path automatically in the dist folder -->
   </body>
