--- a/index.html
+++ b/index.html
@@ -1,25 +1,14 @@
-<!-- <!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Naitik's Protfolio</title>
+    <title>Naitik's Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
+    <!-- ✅ This must be here -->
     <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html> -->
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
-  </head>
-  <body>
-    <div id="root"></div>
   </body>
 </html>
